--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,26 @@
 * {
     box-sizing: border-box;
+    font-family: Verdana, sans-serif;
 }
 body {
     background-color: black;
     text-align: center;
 }
-.primary-header{
-    font-family: Verdana, sans-serif;
-    font-weight: 500;
+.primary-headers{
+    font-weight: normal;
     font-size: 50px;
     color: white;
     text-align: center;
 }
+.primary-headers:nth-child(2){
+    font-size: 42px;
+    font-weight: 300;
+}
+.secondary-headers {
+    font-size: 21px;
+    color: gray;
+}
+
 .primary-link {
     color: aquamarine;
     font-size: 16px;
