--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,13 @@ body {
     font-size: 21px;
     color: gray;
 }
-
 .primary-link {
     color: aquamarine;
     font-size: 16px;
+}
+.image-holder {
+    margin: 5px auto;
+}
+footer .primary-link {
+    text-align: right;
 }
